# proserver-init

./: .envrc  .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  ansible-init  flake.nix  proserver-init  proserver-init.py  pyproject.toml  requirements.txt  setup.cfg
Formula/: ansible-init.rb  proserver-init.rb
files/: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  ansible.cfg  requirements.yml
proserver_init/: __init__.py  cli.py  config_writer.py  constants.py  help_strings.py  infra.py  utils.py
proserver_init/templates/infra/generic/: .ansible-lint  .editorconfig  .envrc.template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md.template  ansible.cfg  inventory.ini  inventory.py  playbook.yaml  requirements.txt  requirements.yaml
proserver_init/templates/infra/generic/.bin/: ansible-keyscan  ansible-vault-merge
proserver_init/templates/infra/generic/group_vars/: production.yaml  secrets.yaml  staging.yaml
proserver_init/templates/infra/generic/host_vars/: vpro0000.proserver.punkt.de.yaml
proserver_init/templates/infra/neos/: inventory.ini  requirements.yml
proserver_init/templates/infra/neos/group_vars/: app.yaml.template  mailhog.yaml
proserver_init/templates/infra/typo3/: inventory.ini
proserver_init/templates/infra_role/generic/: .aar-doc.yml.template  .ansible-lint  .envrc.template  .gitignore  README.md.template  ansible.cfg  requirements.txt  requirements.yml
templates/infra/generic/: .gitignore  vault_password_file
templates/infra/typo3/: requirements.yml
(+34 files in other folders)
