[build-system]
requires = [ "setuptools>=41", "wheel"  ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name = "proserver-init"
description = "A command-line utility that facilitates setting up a new punkt.de Proserver project"
version = "0.1.0"

[tool.setuptools]
packages =  ["proserver-init"]

[tool.setuptools.packages.find]
where = ["proserver-init"]

dependencies = [
  "ruamel.yaml>=0.18.6",
  "build>=1.2.2",
  "rich>=13.9.3",
]

[project.scripts]
proserver-init = "proserver_init.cli:main"
