[build-system]
requires = [ "setuptools>=41", "wheel"  ]
build-backend = "setuptools.build_meta"

[project]
name = "proserver_init"
description = "A command-line utility that facilitates setting up a new punkt.de Proserver project"
version = "0.3.0"
dependencies = [
  "ruamel.yaml>=0.18.6",
  "build>=1.2.2",
  "rich>=13.9.3",
]

[tool.setuptools.packages.find]
include = ["proserver_init*"]
namespaces = false

[project.scripts]
proserver-init = "proserver_init:main"
